--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -12,7 +12,8 @@ body{
   flex-direction: column;
 }
 
-header{
+.cabecera{
+  width: 100%;
   display: flex;
   flex-direction: row;
   text-align: center;
@@ -23,7 +24,6 @@ header{
 
 header p {
   font-style: italic;
-  
 }
 
 #logo{
@@ -76,20 +76,6 @@ color: green;
    color: #fff;
    text-decoration: none;
  }
- 
- /* .btn-delete {background-image: linear-gradient(to right, #000000 0%, #e74c3c  51%, #000000  100%)}
- .btn-delete {
-    margin: 10px;
-    padding: 15px 45px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: white;            
-    box-shadow: 0 0 20px #eee;
-    border-radius: 10px;
-    display: block;
-  } */
  
 #btnDelete{
   background-color: red;
@@ -228,7 +214,7 @@ h2{
 
 footer{
   background-color: rgb(7, 7, 71);
-  padding: 20px;
+ 
   list-style: none;
   text-align: center;
   width: 100%
